[gd_scene load_steps=4 format=3 uid="uid://bxwomabx5uus8"]

[ext_resource type="Script" uid="uid://hmpl8s7qykq8" path="res://script/menu_button.gd" id="1_4e0yl"]
[ext_resource type="FontFile" uid="uid://1465i6skli5p" path="res://models/font/Pirata_One/PirataOne-Regular.ttf" id="1_17hws"]
[ext_resource type="Texture2D" uid="uid://dxqpoq1faluoh" path="res://models/ui/Double/Divider Fade/divider-fade-005.png" id="2_4e0yl"]

[node name="MenuButton" type="TextureButton"]
custom_minimum_size = Vector2(0, 50)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
script = ExtResource("1_4e0yl")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_constants/separation = 32
alignment = 1

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_4e0yl")

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_17hws")
theme_override_font_sizes/font_size = 32
text = "default texte"
uppercase = true

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_4e0yl")
flip_h = true

[connection signal="mouse_entered" from="HBoxContainer" to="." method="_on_h_box_container_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer" to="." method="_on_h_box_container_mouse_exited"]
